[project]
name = "ailoy"
version = "0.0.1"
description = "Ailoy runtime library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jmespath>=1.0.1",
    "numpy>=2.0.2",
    "pydantic>=2.11.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.8",
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "../.."
build-dir = "./build"
wheel.packages = ["ailoy"]

[tool.pytest.ini_options]
addopts = "--capture=tee-sys"
testpaths = ["tests"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
]
line-length = 120
