[project]
name = "ailoy"
version = "0.0.1"
description = "Ailoy Python library"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Brekkylab Dev", email = "dev@brekkylab.com"}
]
license-files = ["LICENSE.md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anyio>=4.9.0",
    "jmespath>=1.0.1",
    "mcp>=1.8.0",
    "numpy>=2.0.2",
    "pydantic>=2.11.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.8",
    "pdoc>=15.0.3",
]

[build-system]
requires = ["setuptools", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "pp*"
build-verbosity = 1

[tool.cibuildwheel.macos]
archs = ["arm64"]

[tool.pytest.ini_options]
addopts = "--capture=tee-sys --strict-markers"
asyncio_mode = "strict"
markers = [
    "runtime: tests for low-level runtime APIs",
    "agent: tests for high-level agent APIs"
]
pythonpath = "tests"
testpaths = ["tests"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
]
line-length = 120
