[project]
name = "ailoy"
version = "0.0.1"
description = "Ailoy runtime library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anyio>=4.9.0",
    "jmespath>=1.0.1",
    "mcp>=1.8.0",
    "numpy>=2.0.2",
    "pydantic>=2.11.4",
    "rich>=14.0.0",
    "typer>=0.15.4",
]

[project.scripts]
ailoy = "ailoy.cli.__main__:app"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.8",
    "pdoc>=15.0.3",
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "../.."
build-dir = "./build"
wheel.packages = ["ailoy"]

[tool.scikit-build.cmake.define]
AILOY_WITH_TEST = "OFF"
CMAKE_TOOLCHAIN_FILE = "C:/vcpkg/scripts/buildsystems/vcpkg.cmake"

[tool.pytest.ini_options]
addopts = "--capture=tee-sys --strict-markers"
asyncio_mode = "strict"
markers = [
    "runtime: tests for low-level runtime APIs",
    "agent: tests for high-level agent APIs"
]
pythonpath = "tests"
testpaths = ["tests"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
]
line-length = 120
