[project]
name = "roguewrite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ailoy-py~=0.0.1",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
]
line-length = 120
